enhance css responsive

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      http-equiv="origin-trial"
+      content="AmpOYrYt/iBpnL4ccW10PQ/slDqFJQe7zDNwZ5ngu1Csl+9PzK8R09QZk9BD9ZuX4etEzLKSbFC0GQXXALU6QAEAAAB9eyJvcmlnaW4iOiJodHRwczovL2ZpbmFsLWNoYXQtOThjZjYuZmlyZWJhc2VhcHAuY29tOjQ0MyIsImZlYXR1cmUiOiJOYXRpdmVGaWxlU3lzdGVtIiwiZXhwaXJ5IjoxNTczOTcyODc0LCJpc1N1YmRvbWFpbiI6dHJ1ZX0="
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +28,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
